add defaule home, learning, juzu page

--- a/extension/war/src/main/resources/locale/navigation/portal/classic_en.properties
+++ b/extension/war/src/main/resources/locale/navigation/portal/classic_en.properties
@@ -17,4 +17,6 @@
 # 02110-1301 USA, or see the FSF site: http://www.fsf.org.
 #
 
-portal.classic.samplePage=Sample-Ext Page Portal
+portal.classic.samplePage=welcome
+portal.classic.juzuPage=juzu
+portal.classic.learningPage=learning
