save ui lesson form

--- a/webui/src/main/webapp/WEB-INF/classes/locale/portlet/estudy/EstudyPortlet.properties
+++ b/webui/src/main/webapp/WEB-INF/classes/locale/portlet/estudy/EstudyPortlet.properties
@@ -1,2 +1,9 @@
 #Default KEY
 javax.portlet.title=E Study system
+UIEPopupWindow.title.UIQuestionForm=Question
+UIQuestionForm.action.Save=Save
+UIQuestionForm.action.Cancel=Cancel
+UIEPopupWindow.title.UILessonForm=Lesson
+UILessonForm.action.Save=Save
+UILessonForm.action.Cancel=Cancel
+simpleCaptcha=Enter captchar
